--- a/module_4_challenge.ipynb
+++ b/module_4_challenge.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "e076f57f",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "4      195.10     108.17        46.43   20            1  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "71b9bbd2",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "bc0f4172",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
        "max      846.270000     46.430000  3.958244e+06      9.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b24b53cc",
    "metadata": {},
    "outputs": [],
@@ -471,59 +471,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "551cb358",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "category\n",
+       "consumables    23538\n",
+       "furniture      11915\n",
+       "software        8400\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# What three item categories had the most entries?\n",
-    "\n"
+    "\n",
+    "df['category'].value_counts().head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5f54e2cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "subcategory\n",
+       "bathroom supplies    6424\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# For the category with the most entries,\n",
     "# which subcategory had the most entries?\n",
-    "\n"
+    "# First, find the category with the most entries\n",
+    "top_category = df['category'].value_counts().idxmax()\n",
+    "\n",
+    "# Then, filter the dataset by this category and count entries in subcategories\n",
+    "df[df['category'] == top_category]['subcategory'].value_counts().head(1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2db94379",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "client_id\n",
+       "33615    220\n",
+       "66037    211\n",
+       "46820    209\n",
+       "38378    207\n",
+       "24741    207\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Which five clients had the most entries in the data?\n",
-    "\n"
+    "\n",
+    "top_clients = df['client_id'].value_counts().head(5)\n",
+    "top_clients"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a6635601",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[33615, 66037, 46820, 38378, 24741]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Store the client ids of those top 5 clients in a list.\n",
-    "\n"
+    "top_clients_ids = top_clients.index.tolist()\n",
+    "top_clients_ids\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c88b8a3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64313"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# How many total units (the qty column) did the\n",
     "# client with the most entries order order?\n",
-    "\n"
+    "most_active_client_id = top_clients_ids[0]\n",
+    "total_units_ordered = df[df['client_id'] == most_active_client_id]['qty'].sum()\n",
+    "total_units_ordered\n"
    ]
   },
   {
@@ -537,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0c25c4a8",
    "metadata": {},
    "outputs": [],
@@ -545,12 +622,12 @@
     "# Create a column that calculates the \n",
     "# subtotal for each line using the unit_price\n",
     "# and the qty\n",
-    "\n"
+    "df['line_subtotal'] = df['unit_price'] * df['qty']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ac9dafc8",
    "metadata": {},
    "outputs": [],
@@ -559,12 +636,13 @@
     "# Assume a shipping price of $7 per pound\n",
     "# for orders over 50 pounds and $10 per\n",
     "# pound for items 50 pounds or under.\n",
+    "df['shipping_price'] = df.apply(lambda x: 7 * x['unit_weight'] if x['unit_weight'] > 50 else 10 * x['unit_weight'], axis=1)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "77f42c67",
    "metadata": {},
    "outputs": [],
@@ -572,12 +650,13 @@
     "# Create a column for the total price\n",
     "# using the subtotal and the shipping price\n",
     "# along with a sales tax of 9.25%\n",
-    "\n"
+    "df['total_price'] = df['line_subtotal'] + df['shipping_price']\n",
+    "df['total_price'] = df['total_price'] * 1.0925  # Applying a 9.25% tax\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c82ad275",
    "metadata": {},
    "outputs": [],
@@ -586,19 +665,19 @@
     "# of each line using unit cost, qty, and\n",
     "# shipping price (assume the shipping cost\n",
     "# is exactly what is charged to the client).\n",
-    "\n"
+    "df['line_cost'] = (df['unit_cost'] * df['qty']) + df['shipping_price']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "e2389018",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a column for the profit of\n",
     "# each line using line cost and line price\n",
-    "\n"
+    "df['line_profit'] = df['total_price'] - df['line_cost']\n"
    ]
   },
   {
@@ -618,12 +697,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c0e5d68e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "order_id\n",
+       "2742071    139844.512025\n",
+       "2173913    119838.357050\n",
+       "6128929    752748.745475\n",
+       "Name: total_price, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check your work using the totals above\n"
+    "# Check your work using the totals above\n",
+    "order_totals = df.groupby('order_id')['total_price'].sum()\n",
+    "order_check = order_totals.loc[[2742071, 2173913, 6128929]]\n",
+    "order_check"
    ]
   },
   {
@@ -637,19 +734,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "7c005f34",
    "metadata": {},
    "outputs": [],
    "source": [
     "# How much did each of the top 5 clients by quantity\n",
     "# spend? Check your work from Part 1 for client ids.\n",
-    "\n"
+    "summary_df = df[df['client_id'].isin(top_clients_ids)].groupby('client_id').agg(\n",
+    "    total_units=('qty', 'sum'),\n",
+    "    total_shipping=('shipping_price', 'sum'),\n",
+    "    total_revenue=('total_price', 'sum'),\n",
+    "    total_profit=('line_profit', 'sum')\n",
+    ").sort_values(by='total_profit', ascending=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "81b6e4d2",
    "metadata": {},
    "outputs": [],
@@ -658,12 +760,14 @@
     "# for the top 5 clients with the following information:\n",
     "# total units purchased, total shipping price,\n",
     "# total revenue, and total profit. Sort by total profit.\n",
+    "summary_df['total_revenue'] /= 1e6\n",
+    "summary_df['total_profit'] /= 1e6\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "7be02867",
    "metadata": {},
    "outputs": [],
@@ -671,7 +775,13 @@
     "# Format the data and rename the columns\n",
     "# to names suitable for presentation.\n",
     "# Currency should be in millions of dollars.\n",
-    "\n"
+    "# Sort the updated data by \"Total Profit\" form highest to lowest\n",
+    "summary_df.rename(columns={\n",
+    "    'total_units': 'Total Units',\n",
+    "    'total_shipping': 'Total Shipping ($)',\n",
+    "    'total_revenue': 'Total Revenue (M$)',\n",
+    "    'total_profit': 'Total Profit (M$)'\n",
+    "}, inplace=True)\n"
    ]
   },
   {
@@ -681,7 +791,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sort the updated data by \"Total Profit\" form highest to lowest\n"
+    "\n"
    ]
   },
   {
